<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounds">

    <ImageButton
        android:id="@+id/notifications_icon_box_home"
        android:layout_width="116dp"
        android:layout_height="60dp"
        android:layout_marginBottom="19dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/click_this_box_to_access_notifications"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="@+id/two_third"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/notifications_box" />

    <ImageButton
        android:id="@+id/settings_icon_box_home"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginTop="72dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/click_this_box_to_access_settings"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/one_third"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/settings_box" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/addapt"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/one_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="117dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/two_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="294dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <ImageView
        android:id="@+id/notification_icon_home"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_for_the_notification_button_on_the_home_screen"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/notifications_icon_box_home"
        app:layout_constraintStart_toStartOf="@+id/two_third"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notificiations_icon" />

    <ImageView
        android:id="@+id/settings_icon_home"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_for_the_settings_button_on_the_home_screen"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/settings_icon_box_home"
        app:layout_constraintEnd_toEndOf="@+id/settings_icon_box_home"
        app:layout_constraintStart_toStartOf="@+id/settings_icon_box_home"
        app:layout_constraintTop_toTopOf="@+id/settings_icon_box_home"
        app:srcCompat="@drawable/settings_icon" />

    <ImageView
        android:id="@+id/timer_icon_home"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_for_the_timer_button_on_the_home_screen"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/timer_icon_box_home"
        app:layout_constraintEnd_toStartOf="@+id/real_one_third"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timer_icon_box_home"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/timer_icon" />

    <ImageView
        android:id="@+id/calendar_icon_home"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_for_the_calendar_button_on_the_home_screen"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/real_two_third"
        app:layout_constraintStart_toStartOf="@+id/real_one_third"
        app:layout_constraintTop_toTopOf="@+id/calendar_icon_box_home"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/calendar_icon" />


    <ImageView
        android:id="@+id/family_icon_home"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_for_the_family_button_on_the_home_screen"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/family_icon_box_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/real_two_third"
        app:layout_constraintTop_toTopOf="@+id/family_icon_box_home"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/family_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/real_one_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="137dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/real_two_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="274dp" />

    <Button
        android:id="@+id/timer_icon_box_home"
        android:layout_width="137dp"
        android:layout_height="88dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/real_one_third"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/calendar_icon_box_home"
        android:layout_width="137dp"
        android:layout_height="88dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/real_two_third"
        app:layout_constraintStart_toStartOf="@+id/real_one_third"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/family_icon_box_home"
        android:layout_width="137dp"
        android:layout_height="88dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/calendar_icon_box_home"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/family_icon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/family"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/real_two_third"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/calendar_icon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/calendar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/real_two_third"
        app:layout_constraintStart_toStartOf="@+id/real_one_third"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/timer_icon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/timer_icon_box_home"
        app:layout_constraintEnd_toStartOf="@+id/real_one_third"
        app:layout_constraintStart_toStartOf="@+id/timer_icon_box_home"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>